steps/10/app/gateway_and_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-app
spec:
  hosts:
  - "*"
  gateways:
  - frontend-app-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: frontend-app
        port:
          number: 3000
  - route:
    - destination:
        host: frontendv2-app
        port:
          number: 3000
