steps/10/app/gateway_and_virtual_service_abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-app
spec:
  hosts:
  - backend-app
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 100
    route:
    - destination:
        host: backend-app
      weight: 100
