steps/10/app/virtual_service_50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-app
spec:
  hosts:
  - backend-app
  http:
  - route:
    - destination:
        host: backendv2-app
      weight: 50
    - destination:
        host: backend-app
      weight: 50
